[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.21"
deno_core = "0.319.0"
dialoguer = "0.11.0"
swc_ecma_codegen = "4.0.2"
swc_ecma_parser = "5.0.0"
tokio = {version = "1.28.2", features = ["full", "macros"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
